@@ -25,6 +25,10 @@ function behaviors() {
             // ID компонента, реализующего кеширование.
             // По умолчанию ID равен false. 
             'CacheID' => 'cache',
+
+            // Создавать несуществующие теги автоматически.
+            // При значении false сохранение выкидывает исключение если добавляемый тег не существует.
+            'createTagsAutomatically' => true,
         )
     );
 }
